--- a/GymManagementSystemPL/appsettings.Development.json
+++ b/GymManagementSystemPL/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-VLOLT3L;Database=GymManagement;Trusted_Connection = True ;TrustServerCertificate = True"
   }
+
 }
